syntax = "proto2";

option java_package = "ch.epfl.dedis.proto";
option java_outer_classname = "KeyPairProto";

message KeyPair {
    required bytes public = 1;
    required bytes private = 2;
    optional bytes publicComplete = 3;
}
